test: Add comprehensive performance tests (Phase 4.4)
- Expand cache performance tests
  - Fix cache hit performance test to handle very fast operations
  - Add concurrent access test
  - Add LRU eviction performance test
  - Add latency percentile tests (p50, p95, p99)
  - Use time.perf_counter for better precision

- Add retrieval performance tests
  - Test baseline retrieval latency
  - Test retrieval throughput
  - Test concurrent query handling
  - Test latency percentiles
  - Test memory usage stability

- Add LLM call performance tests
  - Test LLM call latency baseline
  - Test caching effectiveness
  - Test LLM call throughput
  - Test latency percentiles
  - Test caching hit rate
  - Test memory usage stability
  - Properly mock ChatOpenAI to avoid API key requirement

- Register 'performance' marker in pytest.ini
- All performance tests passing (17 passed)

--- a/advanced_rag/pytest.ini
+++ b/advanced_rag/pytest.ini
@@ -21,6 +21,7 @@ markers =
     unit: Unit tests (fast, no external dependencies)
     integration: Integration tests (may require external services)
     property: Property-based tests using Hypothesis
+    performance: Performance and benchmark tests
     slow: Slow running tests
     requires_api: Tests requiring API keys (OpenAI, etc.)
     requires_data: Tests requiring dataset files
